--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"laravel/framework": "4.2.*",
 		"fzaninotto/faker": "~1.5",
 		"vimeo/vimeo-api": "^1.2",
-		"aws/aws-sdk-php": "~3.0"
+		"aws/aws-sdk-php": "~3.0",
+        "alaouy/youtube": "dev-master"
 	},
 	"require-dev": {
 		"way/generators": "~2.0"
